pod-spec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acc-manager
  template:
    metadata:
      labels:
        app: acc-manager
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: acc-manager
        image: accountcentralizer.azurecr.io/acc-manager:v1
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: acc-manager
spec:
  ports:
  - port: 6379
  selector:
    app: acc-manager
