pod-spec2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-acc-manager
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-acc-manager
  template:
    metadata:
      labels:
        app: aks-acc-manager
    spec:
      containers:
      - name: acc-manager
        image: accountcentralizer.azurecr.io/acc-manager
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-acc-manager
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-acc-manager
