ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acc-manager-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /cadastrar
        pathType: Prefix
        backend:
          service:
            name: aks-acc-manager
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-acc-manager
            port:
              number: 80
