ingress3.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: acc-manager-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - acc-manager.southindia.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: acc-manager.southindia.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: aks-acc-manager
          servicePort: 80
