ingress4.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: acc-manager-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - acc-manager.southindia.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: acc-manager.southindia.cloudapp.azure.com
    http:
      paths:
      - path: /mangobank-back
        backend:
          serviceName: aks-mangobank-back
          servicePort: 80
      - path: /mangobank-front
        backend:
          serviceName: aks-mangobank-front
          servicePort: 80
      - path: /openbanking-back
        backend:
          serviceName: aks-openbanking-back
          servicePort: 80
      - path: /openbanking-front
        backend:
          serviceName: aks-openbanking-front
          servicePort: 80
